Some major updates
1. Multi-threading support
2. No temporary files written
3. Cleaned up the code

--- a/config.json
+++ b/config.json
@@ -4,6 +4,9 @@
   "version":  "1.1",
   "brightnessThreshold": 0.4,
   "laplacianVarianceThreshold":  400,
+  "numProcs": 2,
+  "numGpus": 1,
+  "overwrite": true,
 
    "masks": [
     {"name": "./masks/mask001.png", "shape": 1, "surface": 2, "weight": 30, "minSize": 0.1},
